# elvpn

./: .gitignore  mount-vdsina.sh  prompt  rsync.example  ssh-22.sh  ssh-28078.sh  to-ikev2-docker.sh  ufw-tune.sh  vpn-run.sh
ipsec--status-parser/: .gitignore  CMakeLists.txt  locator.cpp  locator.h  main.cpp  parser.cpp  parser.h  reader.cpp  reader.h
kylemanna/: .gitignore  cmd-openvpn  commands  create-key.sh  duplicate-cn  get-key.sh  print-keys.sh  re-run-openvpn.sh  tail-logs.sh  watch-ovpn.sh
kylemanna/openvpn-data/: openvpn.conf
mdie/: .gitignore  commands.txt  readme.txt
nginx/: re-run-nginx.sh
nginx/etc-nginx/: nginx.conf
pykey-server/: print-keys.sh  push-keys.sh  pykey-server.py
vpn-mon2/: CMakeLists.txt  ip_locator.cpp  ip_locator.h  ipsec.cpp  ipsec.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  openvpn.cpp  openvpn.h  ssh_process.cpp  ssh_process.h  userlog.cpp  userlog.h
